<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Silent</string>
    <string name="bt_sm">There isn\'t enough space on the SD card to save the file from \u0022<xliff:g id="sender">%1$s</xliff:g>\u0022</string>
    <string name="start">Start Listening</string>
    <string name="stop">Stop</string>
    <string name="hint_silent_db">silent DB, digital only, default 50db</string>
    <string name="hint_issue_time">please enter issue time, default 10000ms</string>
    <string name="bt_state">BT Connection state：</string>
    <string name="bt_check_bt_status">Start checking BT status</string>
    <string name="bt_check_wifi_status">Start checking Wifi status</string>
    <string name="bt_check_bt_battery">Start checking BT Battery</string>
    <string name="bt_start_sco">Start playing</string>
    <string name="bt_route_sco">Change route to SCO</string>
    <string name="bt_route_a2dp">Change route to A2DP</string>
    <string name="cur_route_sco">Current route: SCO</string>
    <string name="cur_route_a2dp">Current route: A2DP</string>
    <string name="start_chart">Start updating chart</string>
    <string name="title_activity_start">QATool</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">QA tools</string>
    <string name="nav_header_subtitle">wisl@motorola.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="autoT">AutoTest</string>
    <string name="disAutoT">Stop AutoTest</string>
    <string name="menu_home">Home</string>
    <string name="menu_bt_state">BT State</string>
    <string name="menu_bt_battery">BT Battery</string>
    <string name="menu_wifi_state">Wifi State</string>
    <string name="menu_bt_sco">BT SCO</string>

    <string name="home_second">Home Second</string>
    <string name="note_bt_sco">Please push sampleA2DP.mp3, sampleSCO.mp3 into sdcard before testing</string>
</resources>
