<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bt_state"
            android:icon="@drawable/ic_menu_bt"
            android:title="@string/menu_bt_state" />
        <item
            android:id="@+id/nav_bt_battery"
            android:icon="@drawable/ic_menu_battery"
            android:title="@string/menu_bt_battery" />
        <item
            android:id="@+id/nav_wifi_state"
            android:icon="@drawable/ic_menu_wifi"
            android:title="@string/menu_wifi_state" />
        <item
            android:id="@+id/nav_bt_sco"
            android:icon="@drawable/ic_menu_bt"
            android:title="@string/menu_bt_sco" />
    </group>
</menu>
