<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".bluetooth.BTBatteryFragment">
    <Button
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/btnStartSco"
        android:text="@string/bt_start_sco"
        android:textSize="22sp"
        />
    <Button
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/btnChangeRoute"
        android:text="@string/bt_route_a2dp"
        android:textSize="22sp"
        />
    <TextView
        android:id="@+id/txRoute"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cur_route_a2dp"
        android:textSize="20sp"
        />

</LinearLayout>