<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btsm"
        android:textSize="22sp"
        />
    <Button
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/btnStart"
        android:text="@string/start"
        android:textSize="22sp"
        />
    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_silent_db"
        />
    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/silentDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_silent_db"
        android:digits="0123456789"/>
    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_issue_time"
        />
    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/issueTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_issue_time"
        android:digits="0123456789"/>
    <TextView
        android:layout_marginTop="30dp"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_state"
        />
    <TextView
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:id="@+id/btState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/dbChart"
        android:orientation="vertical">
     </LinearLayout>


</LinearLayout>